--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   # UI & Animations
   lottie: ^2.7.0
 
+  # Biometric authentication
+  local_auth: ^2.1.6
+
   # Utilities
   intl: ^0.18.1
   share_plus: ^7.2.1
